--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bee</string>
+    <string name="app_name">趣鲜蜂</string>
     <string name="mimalogin">密码登录</string>
     <string name="phonelogin">手机号登录</string>
 
