--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 
     <string name="text_kickout">登录状态失效，为保证您的账户安全，请重新登录！</string>
     <string name="tv_login_pass_set">已设置</string>
+    <string name="tv_lianxuqiandao">连续签到%s天</string>
+    <string name="tv_sign_inform">已连续签到%s天，领取</string>
 </resources>
