限时秒杀及站内信接口及逻辑写入

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="tv_login_pass_set">已设置</string>
     <string name="tv_lianxuqiandao">连续签到%s天</string>
     <string name="tv_sign_inform">已连续签到%s天，领取</string>
+    <string name="tv_remain_bumber">剩%s</string>
 </resources>
