--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="tv_lianxuqiandao">连续签到%s天</string>
     <string name="tv_sign_inform">已连续签到%s天，领取</string>
     <string name="tv_remain_bumber">剩%s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
